--- a/Css/details.css
+++ b/Css/details.css
@@ -1,7 +1,5 @@
-/* ----------------body styles----------------------- */
 body{
     box-sizing: border-box;
-    color: white;
     text-align: center;
     background-color: rgb(128, 125, 128);
     background-image: linear-gradient(to bottom right,rgba(112, 229, 250, 0) 10%,  rgb(106, 98, 185) 60%,rgba(112, 229, 250, 0) 80%,#04a7e7);
@@ -10,57 +8,31 @@ body{
 
 /* main div styles */
 #main{
-    height: 100%;
+    height: 95%;  
+    text-align: center; 
 }
 h2{
     font-size: 40px;
-    margin-left: 50%;
-    text-align: center;
-}
-
-h4{
-    text-align: center;
-    margin-left: 80px;
-    font-size: 22px;
-    position: absolute;
-    top: 8%;
-    text-decoration: underline;
-    margin-left: 22%;
+    
 }
 img{
     border-radius: 20px;
     border: 1px solid black;
-    height: 450px;
-    width: 450px;
-    /* right: 80%; */
-    margin-left: 45%;
+    height: 300px;
+    width: 300px;
 }
 
 a{
     font-size: 20px;
-    color: white;
-    /* text-align: right; */
-    /* margin-right: -100px; */
-    /* float: right; */
-    
 }
-#yt{
-margin-left: 52%;
-/* margin-bottom: -50px; */
-}
-#instruction{
-width:55%;
-margin-top: -440px;
-font-size: 20px;
-}
+
 /* home anchors style */
-a img{
+#backImg{
     margin: 25px 0 0 25px;
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     border: 1px solid black;
     float: left;
-    border-radius: 15px;
 }
 
 
@@ -101,5 +73,70 @@ a img{
     }
     p{
         font-size: 12px;
+    }
+}
+
+
+
+/* styles for size less then 800px  */
+
+@media only screen and (max-width:800px){
+    .centerLists {
+        width: 450px;
+    }
+
+
+
+
+    /* reducing list size and font size image size  */
+    #alpha-items,#fav-items,#cat-items{
+        height: 100px; 
+    }
+
+    #alpha-items > div,#fav-items > div,#cat-items > div{
+        height: 98px; 
+        width: 150px; 
+    }
+
+
+    #alpha-items  img, #fav-items  img, #cat-items  img{
+        width: 200px;
+        
+    }
+
+
+    /* heading size  */
+    #alpha-items h5,#fav-items h5,#cat-items h5{
+        height: 60px;
+        width: 200px;
+        font-size: 15px;
+        margin: 3px 0px 0px 3px;
+        font-weight: 300;
+    }
+
+    /* button size  */
+    #alpha-items button, #fav-items button, #cat-items button{
+        height: 30px;
+        margin-left: 20px;
+        background-image: linear-gradient(to right,  rgb(250, 75, 98),rgba(255,0,0,0));
+        border-radius: 10px;
+        font-size: 12px;
+        padding: 2px 5px;
+    }
+    #backImg{
+        height: 40px;
+        width: 40px;
+        margin: 15px 0 0 15px;
+    }
+}
+
+
+
+/* styles for size less then 380px */
+@media only screen and (max-width:380px){
+    /* home anchor size reduce */
+    #backImg{
+        height: 25px;
+        width: 25px;
     }
 }
